# textrep

./: .coverage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml
docs/: USAGE.md
src/textrep/: __init__.py  analyzer.py  cli.py  models.py  report.py
src/textrep.egg-info/: PKG-INFO  SOURCES.txt
src/textrep/statistics/: __init__.py  characters.py  frequency.py  words.py
src/textrep/utils/: __init__.py  reader.py  tokenizer.py
tests/: test_analyzer.py  test_characters.py  test_frequency.py  test_reader.py  test_words.py
