[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textrep"
version = "1.0.0"
description = "A lightweight text analysis library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kartik" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]