[project]
name = "textrep"
version = "1.0.1"
description = "A lightweight text analysis library"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Kartik" }
]

license = { text = "MIT" }

keywords = [
    "text",
    "analysis",
    "nlp",
    "python"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]